src/objects/Energy_Usage__c.object
<CustomObject>
    <fields>
        <fullName>Avg__c</fullName>
        <label>Avg</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>Energy Usages</relationshipLabel>
        <relationshipName>Energy_Usages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max__c</fullName>
        <label>Max</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min__c</fullName>
        <label>Min</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <label>Energy Usage</label>
    <nameField>
        <displayFormat>EU-{00000000}</displayFormat>
        <label>Energy Usage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>